--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@
     <script src="app/view1/view1.js"></script>
     <script src="app/view2/view2.js"></script>
     <script src="app/view3/view3.js"></script>
-    <script src="app/view4/view4.js"></script>
+    <script src="app/view5/view5.js"></script>
     <script src="app/components/auth.js"></script>
     <script src="app/components/filters.js"></script>
     <script src="app/components/directives.js"></script>
@@ -51,7 +51,7 @@
               <li><a href="#/view1">Home</a></li>
               <li><a href="#/view2">Page for Users</a></li>
               <li><a href="#/view3">Page for Admins</a></li>
-              <li><a href="#/view4">Using the Seed</a></li>
+              <li><a href="#/view5">Testing services</a></li>
             </ul>
             <div>
               <form class="navbar-form navbar-right" role="form" ng-show="!isAuthenticated" ng-submit="login()"  >
